# DevProtector

./: .ipproject  Cargo.toml  README.md
remote_server/: db.sqlite3  manage.py
remote_server/projects/: models.py  serializers.py  urls.py  views.py
remote_server/projects/migrations/: 0001_initial.py
remote_server/remote_server/: asgi.py  settings.py  wsgi.py
src/: error.rs  main.rs
src/commands/: detect.rs  encrypt.rs  init.rs  mod.rs  status.rs
